<resources>
    <string name="app_name">Salez</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="salez">SALEZ</string>
    <string name="direct_sales_management">Direct sales management</string>
    <string name="stock">Stock</string>
    <string name="clients">Clients</string>
    <string name="votre_caisse">Votre caisse</string>
    <string name="aujourd_hui">Aujourd\'hui</string>
    <string name="cette_semaine">Cette semaine</string>
    <string name="ventes">Ventes</string>
    <string name="depenses">Dépenses</string>

    <string name="dim">Dimanche</string>
    <string name="lun">Lundi</string>
    <string name="mar">Mardi</string>
    <string name="mer">Mercredi</string>
    <string name="jeu">Jeudi</string>
    <string name="quantit_chargee">Quantité Chargée :</string>
    <string name="quantit_Vendue">Quantité vendue :</string>
    <string name="quantit_restante">Quantité restante :</string>
    <string name="prix">Prix :</string>
    <string name="ferme">Fermé</string>
    <string name="produit_dispo">Produit disponible</string>
    <string name="manque_liqu">Manque de liquidité</string>
    <string name="refus">Refus achat</string>
    <string name="autre">Autre motif</string>
    <string name="absence">Absence gérant</string>

    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="login_now">Login Now</string>
    <string name="don_t_remember_password">Don\'t Remember password?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="or">or</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="bonjour">Bonjour ,</string>
    <string name="vous_n_avez_pas_l_autorisation_pour_d_buter_votre_mission">Vous n\'avez pas l\'autorisation pour débuter votre mission.</string>
    <string name="logout">Déconnexion</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="second_name">second name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="bon_de_sortie">Bon de sortie</string>
    <string name="bon_de_retour">Bon de retour</string>
    <string name="agent">Agent</string>
    <string name="pointeur">Pointeur</string>
    <string name="radio_group_type_sign">Vous êtes un :</string>
    <string name="absent">Absent</string>
    <string name="vehicule_en_panne">Véhicule en panne</string>
    <string name="historique">Historique</string>
    <string name="profile">Profile</string>
    <string name="serveur">Serveur</string>
    <string name="info">Info</string>
    <string name="send_data">Envoyer les données</string>
    <string name="receive_data">Recevoir les données</string>
    <string name="informations">Informations Générales</string>
    <string name="settings">Paramètres</string>
</resources>
