<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".VenteActivity">

        <!-- TODO: Update blank fragment layout -->
        <!--Top Bar-->
        <RelativeLayout
            android:id="@+id/appbarav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp">

            <ImageView
                android:id="@+id/back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:background="@drawable/blanc_circular_border"
                android:padding="6dp"
                android:src="@drawable/ic_backspace"
                android:layout_margin="6dp"/>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/salez"
                    android:textColor="@color/textColor"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/xsmall"
                    android:text="@string/direct_sales_management"
                    android:textSize="15sp" />
            </LinearLayout>


        </RelativeLayout>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/username"
                android:inputType="text"
                android:selectAllOnFocus="true" />
            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/name"
                android:inputType="text"
                android:selectAllOnFocus="true" />
            <EditText
                android:id="@+id/second_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/second_name"
                android:inputType="text"
                android:selectAllOnFocus="true" />
            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:hint="Phone"
                android:inputType="text"
                android:selectAllOnFocus="true" />


    <Button android:id="@+id/valider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Valider"
        android:layout_margin="30dp"
        android:background="@drawable/button_login_bg"
        android:textColor="@color/white"
        android:padding="8dp"
        android:layout_gravity="center"/>
    </LinearLayout>

</ScrollView>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>