<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment"
    android:background="@color/purple">

    <!-- TODO: Update blank fragment layout -->
    <!--Top Bar-->
    <RelativeLayout android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/medium"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/purple">

        <ImageView
            android:id="@+id/hamb"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:background="@drawable/grey_circular_border"
            android:padding="12dp"
            android:src="@drawable/square_icon_white" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/salez"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/xsmall"
                android:text="@string/direct_sales_management"
                android:textSize="15sp"
                android:textColor="@color/white"/>
        </LinearLayout>



    </RelativeLayout>

    <RelativeLayout android:id="@+id/caisse"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingLeft="50dp">

        <TextView android:id="@+id/txtCaisse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/votre_caisse"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView android:id="@+id/dzd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:textColor="@color/white"
            android:textSize="30sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/dzd"
            android:layout_alignBottom="@id/txtCaisse"
            android:layout_alignParentBottom="true"
            android:text="0.00"
            android:textColor="@color/white"
            android:textSize="60sp"
            android:paddingTop="18dp"/>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        app:layout_constraintTop_toBottomOf="@id/caisse"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="25dp">

        <ProgressBar android:id="@+id/dailyRailisation"
            android:layout_width="75dp"
            android:layout_height="75dp"
            style="@style/CircularDeterminateProgressBarWhite"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:padding="12dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toRightOf="@+id/dailyRailisation"
            android:layout_alignParentBottom="true"
            android:padding="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aujourd_hui"
                android:textColor="@color/white"
                android:textSize="15sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0%"
                android:textColor="@color/white"
                android:textSize="30sp"
                />
        </LinearLayout>





        <LinearLayout  android:id="@+id/txtWeeklyRealisation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:padding="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cette_semaine"
                android:textColor="@color/crevette"
                android:textSize="15sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0%"
                android:textColor="@color/crevette"
                android:textSize="30sp"
                />
        </LinearLayout>

        <ProgressBar android:id="@+id/weeklyRailisation"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_toLeftOf="@+id/txtWeeklyRealisation"
            style="@style/CircularDeterminateProgressBar"
            android:layout_alignParentBottom="true"
            android:padding="8dp"/>


    </RelativeLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/raduis"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">
        <TextView android:id="@+id/titleFrqgmentHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_home"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textSize="32sp"
            android:textColor="@color/purple"
            android:paddingTop="8dp"
            android:paddingLeft="30dp"
            android:textStyle="bold"/>
        <TextView android:id="@+id/cette_semaine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cette semaine"
            app:layout_constraintTop_toBottomOf="@id/titleFrqgmentHome"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textSize="14sp"
            android:textColor="@color/purple"
            android:paddingTop="10dp"
            android:paddingLeft="27dp"/>
        <TextView android:id="@+id/dolla"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$"
            app:layout_constraintTop_toBottomOf="@id/cette_semaine"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/weekCA"
            android:textSize="20sp"
            android:textColor="@color/crevette"
            android:paddingTop="16dp"
            android:paddingLeft="27dp"/>
        <TextView android:id="@+id/weekCA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0.00"
            app:layout_constraintTop_toBottomOf="@id/cette_semaine"
            app:layout_constraintLeft_toRightOf="@id/dolla"
            android:textSize="32sp"
            android:textColor="@color/crevette"
            android:paddingTop="6dp"/>




            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:scrollbars="none" >
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    >

                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/line_chart"
                        android:layout_width="300dp"
                        android:layout_height="150dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="45dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>